--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+  "version": 2,
+  "builds": [
+    { "src": "index.py", "use": "@vercel/python" }
+  ],
   "rewrites": [
     { "source": "/(.*)", "destination": "/api/index" }
   ]
